# CS7334

./: .bash_history  .bashrc  .esd_auth  .gitconfig  .gitignore  .wget-hsts  README.md  output.txt
.slurm/: idv10394.o2913681  idv16334.o2908256  idv84000.o2908018
.ssh/: authorized_keys  id_rsa  known_hosts
Lab1/: app  hello_world.c  job.slurm  output.o2925196  output.txt
Lab2/: prog1.c  prog2.c
Lab3/: compute_stddev  compute_stddev.c  output.e2945969  output.e2946114  output.o2946114  run_omp.slurm
Lab4/: mpi_nonblocking_lab  mpi_nonblocking_lab.c
Project/: ST_FDD_Presentation.pptx
Project/Project_code/: .flwrignore  .gitignore  client_app.py  plot_comparison.py  plot_overhead.py  plot_results.py  pyproject.toml  server_app.py  task.py
Project/Project_code/old_files/: server_app.py
Project/Project_code/results/: all_strategies_combined.csv  async_1.5s.csv  baseline.csv  deadline_8s.csv  erasure_coded.csv  partial_k5.csv  summary_final_round.csv
assignment1/: batch_submission.sh  batch_submission_policy.sh  compute_pi  compute_pi.c  hwloc_job.slurm  hwlocinfo.2968506.out  pi_omp.2957054.out  pi_omp.2957056.out  pi_omp.2957058.out  pi_omp.2957126.out  pi_scale.2957095.out  pi_scale.2957130.out  pi_sched.2957101.out  pi_sched.2957132.out  pi_sched.sh
assignment2/: makefile  pc4_3027343.err  pc4_3027356.err  pc4_3027382.err  pc4_3027400.err  pc4_3027431.err  pc4_3027469.err  producer_consumer  producer_consumer.c  producer_consumer_np12_run1.txt  producer_consumer_np12_run2.txt  producer_consumer_np12_run3.txt  producer_consumer_np12_run4.txt  workpool  (+38 more)
(+17 files in other folders)
