[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fl-hpc-project"
version = "0.1.0"
description = "Straggler-aware and communication-efficient federated learning with Flower"
dependencies = [
    "flwr[simulation]>=1.23.0",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "numpy>=1.24.0",
]

[tool.setuptools]
py-modules = ["task", "client_app", "server_app"]

[tool.flwr.app]
publisher = "mahfuj"

[tool.flwr.app.components]
serverapp = "server_app:app"
clientapp = "client_app:app"

# All run-time hyperparameters with defaults.
# Override from the CLI: flwr run . --run-config "enable-straggler=true num-server-rounds=10"
[tool.flwr.app.config]
num-server-rounds   = 5
num-supernodes      = 100
local-epochs        = 1
lr                  = 0.01
enable-straggler    = true
enable-compression  = false
